Final spacing fixes

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body {
     display: flex;
     flex-direction: column;
+    min-width: 1000px;
 }
 
 .column1 {
@@ -186,7 +187,7 @@ p {
     color: #F9FAF8;
     font-weight: 800;
     position: relative;
-    bottom: 55px;
+    bottom: 60px;
 
 }
 
@@ -232,7 +233,7 @@ button {
 .blue-box {
     background: #3882F6;
     height: 150px;
-    width: 950px;
+    width: 1000px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -261,6 +262,7 @@ button {
     width: 90px;
     height: 30px;
     margin-left: 270px;
+    margin-right: 100px;
     font-weight: 800;
 
 }
